# klifter

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  netlify.toml  pyproject.toml  run-playbook.sh  site.yml
.github/workflows/: build.yml  release.yml
roles/k8s-source/tasks/: main.yml
roles/k8s-source/tasks/sources/: git.yml  local.yml
roles/k8s-state/defaults/: main.yml
roles/k8s-state/tasks/: application.yml  bundle.yml  main.yml  manifest.yml  package.yml
roles/k8s-state/tasks/manifests/: kubernetes.yml  shell.yml  unknown.yml
roles/k8s-state/tasks/tools/: docker.yml  helm.yml  kapp.yml  kbld.yml  kubectl.yml  kustomize.yml  vault.yml  ytt.yml
roles/k8s-state/templates/: docker.list.j2  helm.list.j2  kubernetes.list.j2  vault.list.j2
roles/k8s-state/vars/: main.yml
www/: config.toml
www/content/: _index.md
www/content/docs/: getting-started.md
www/content/docs/tools/: _index.md  docker.md  helm.md  kapp.md  kbld.md  kubectl.md  kustomize.md  vault.md  ytt.md
www/content/docs/tutorials/: _index.md  applications.md  bundles.md  configuration.md  custom-tools.md  secret-management.md
www/layouts/: home.html
www/layouts/_default/: baseof.html
www/layouts/docs/: baseof.html  section.html  single.html
www/layouts/partials/: breadcrumbs.html  css.html  metadata.html  navbar.html  scripts.html  toc.html
www/static/assets/: particles.json
www/static/css/: custom.css
