[tool.poetry]
name = "klifter"
version = "0.1.0"
description = "Deploy bundles and applications from Git"
authors = ["Link Society <contact@link-society.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^3.3.0"
Jinja2 = "^2.11.3"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
